tests/specs/ecosystem/std/archive/0_196_0.test
std/archive/0.196.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/internal@^0.196.0": "jsr:@std/internal@0.196.0"
    },
    "jsr": {
      "@std/internal@0.196.0": {
        "integrity": "510a868cd8dc7a5a4de15b3864961b0f25d4b5b314f1f7d1bf6a5dd9a56173c1"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMeta, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                ~~~~~~
    at file://<tmpdir>/untar.ts:10:81

error: Type checking failed.

